--- a/help/Tipps.html
+++ b/help/Tipps.html
@@ -2,15 +2,10 @@
 <html>
 <head>
 
-
-  
   <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
-
-  
-
-
-  
   <title>Tipps und Tricks</title>
+
+
   <style title="" media="" type="text/css">
 .head { margin: 0px;
 padding: 0px;
@@ -31,34 +26,23 @@ font-size: 12px;
 
 <body>
 
-
 <table style="text-align: left; width: 100%;" border="0" cellpadding="2" cellspacing="2">
-
 
   <tbody>
 
-
     <tr>
-
 
       <td style="width: 50px;"><img style="width: 47px; height: 27px;" src="hilfe.png" alt=""></td>
 
-
       <td>
-      
       <h2 class="head">Tipps und Tricks</h2>
-
 
       </td>
 
-
     </tr>
 
-
-  
   </tbody>
 </table>
-
 
 <hr style="width: 100%; height: 2px;"><br>
 
@@ -68,23 +52,32 @@ Es gibt einige Funktionen in Nemp, die etwas versteckt sind.<br>
 
 <br>
 
-<span style="font-weight: bold;">Dateien kopieren und Sampler zusammenstellen</span><br>
+<span style="font-weight: bold;">Dateien kopieren und
+Sampler zusammenstellen</span><br>
 
 Nemp kann auch Dateien kopieren. Ziehen sie von der Medienliste ein
 einzelnes Lied, mehrere Lieder oder ein ganzes Album in den
 Windows-Explorer. Nemp kopiert dann die Dateien in das neue Verzeichnis.<br>
 
-Von der Playlist aus funktioniert das auch per Copy&amp;Paste, also Strg+C in Nemp, r&uuml;ber zum Explorer, Strg+V.<br>
+Von der Playlist aus funktioniert das auch per Copy&amp;Paste, also
+Strg+C in Nemp, r&uuml;ber zum Explorer, Strg+V.<br>
+Mit Strg+Shift+C wird zus&auml;tzlich zu den Dateien eine passende Playlist-Datei in die Zwischenablage kopiert.<br>
 
 <br>
 
-<span style="font-weight: bold;">Lautst&auml;rke per Mausrad</span><br>
-Wenn Sie einmal im Player-Bereich klicken, k&ouml;nnen Sie die Lautst&auml;rke mit dem Mausrad &auml;ndern.<br>
+<span style="font-weight: bold;">Lautst&auml;rke per
+Mausrad</span><br>
+
+Wenn Sie einmal im Player-Bereich klicken, k&ouml;nnen Sie die
+Lautst&auml;rke mit dem Mausrad &auml;ndern.<br>
+
 <br>
 
 <span style="font-weight: bold;">Kontextmen&uuml;s</span><br>
 
-Nemp hat an verschiedenen Stellen unterschiedliche Kontextmen&uuml;s - einfach ab und zu mal die rechte Maustaste ausprobieren.<br>
+Nemp hat an verschiedenen Stellen unterschiedliche
+Kontextmen&uuml;s - einfach ab und zu mal die rechte Maustaste
+ausprobieren.<br>
 
 <br>
 
@@ -122,9 +115,26 @@ Folgende Elemente haben ein eigenes Kontextmen&uuml;:<br>
 
     <tr>
 
-      <td style="width: 80px;">F7 oder F8</td>
+      <td style="width: 80px;">F7</td>
 
       <td>Wechseln zwischen kompakter und Einzelfenster-Ansicht</td>
+
+    </tr>
+
+    <tr>
+
+      <td style="width: 80px;">F8</td>
+
+      <td>Push-To-Talk (Musik wird leiser geschaltet, solange die Taste gedr&uuml;ckt wird)</td>
+
+    </tr>
+
+    <tr>
+
+      <td style="width: 80px;">F9</td>
+
+      <td>Jingles (Markiertes St&uuml;ck wird in Schleife abgespielt, solange die Taste gedr&uuml;ckt wird)<br>
+      </td>
 
     </tr>
 
@@ -152,7 +162,6 @@ Folgende Elemente haben ein eigenes Kontextmen&uuml;:<br>
 
     </tr>
 
-  
   </tbody>
 </table>
 
@@ -161,7 +170,6 @@ Folgende Elemente haben ein eigenes Kontextmen&uuml;:<br>
 <br>
 
 <br>
-
 
 </body>
 </html>
