--- a/help/jingles.html
+++ b/help/jingles.html
@@ -3,7 +3,7 @@
 <head>
 
   <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
-  <title>Jingles</title>
+  <title>Jingles/Push-To-Talk</title>
 
 
   <style title="" media="" type="text/css">
@@ -35,7 +35,7 @@ font-size: 12px;
       <td style="width: 50px;"><img style="width: 47px; height: 27px;" src="hilfe.png" alt=""></td>
 
       <td>
-      <h2 class="head">Jingles abspielen</h2>
+      <h2 class="head">Jingles abspielen / Push-To-Talk</h2>
 
       </td>
 
@@ -45,17 +45,31 @@ font-size: 12px;
 </table>
 
 <hr style="width: 100%; height: 2px;"><br>
-W&auml;hrend der Wiedergabe eines Titels k&ouml;nnen Sie auch Jingles
+
+W&auml;hrend der Wiedergabe eines Titels k&ouml;nnen Sie auch
+Jingles
 nebenher abspielen. Markieren Sie dazu einfach einen Titel in der
 Playlist oder in der Medienbibliothek und halten Sie die Taste F9
 gedr&uuml;ckt. Der markierte Titel wird solange in einer Schleife
 abgespielt, bis Sie die Taste F9 wieder loslassen.<br>
+
 <br>
-<span style="font-style: italic;">Tipp: Wenn Sie die Taste F9
-gedr&uuml;ckt halten, mit der Maus zu einem&nbsp;anderen Programm
-wechseln und dann die Taste loslassen, l&auml;uft die Schleife weiter,
+
+Wenn Sie die F8 dr&uuml;cken, wird nur die Lautst&auml;rke der
+Wiedergabe reduziert, und Sie k&ouml;nnen &uuml;ber ein Mikrofon eine Durchsage machen.<br>
+
+<br>
+
+<span style="font-style: italic;">Tipp: Wenn Sie die Taste
+F9
+gedr&uuml;ckt halten, mit der Maus zu einem&nbsp;anderen
+Programm
+wechseln und dann die Taste loslassen, l&auml;uft die Schleife
+weiter,
 bis Sie erneut F9 kurz dr&uuml;cken.</span><br>
+
 <br>
+
 <br>
 
 </body>
