--- a/help/optionen_5_Anzeige.html
+++ b/help/optionen_5_Anzeige.html
@@ -2,10 +2,15 @@
 <html>
 <head>
 
+
+  
   <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
+
+  
+
+
+  
   <title>Anzeige</title>
-
-
   <style title="" media="" type="text/css">
 .head { margin: 0px;
 padding: 0px;
@@ -26,47 +31,73 @@ font-size: 12px;
 
 <body>
 
+
 <table style="text-align: left; width: 100%;" border="0" cellpadding="2" cellspacing="2">
+
 
   <tbody>
 
+
     <tr>
+
 
       <td style="width: 50px;"><img style="width: 47px; height: 27px;" src="hilfe.png" alt=""></td>
 
+
       <td>
+      
       <h2 class="head">Anzeige</h2>
+
 
       </td>
 
+
     </tr>
 
+
+  
   </tbody>
 </table>
 
+
 <hr style="width: 100%; height: 2px;"><br>
 
+
 <span style="font-weight: bold;">Sprachauswahl</span><br>
+
 Auswahl der verf&uuml;gbaren Sprachen. Zurzeit sind nur Deutsch und
 Englisch verf&uuml;gbar. Wenn Sie Nemp in eine weitere Sprache
 &uuml;bersetzen wollen, kontaktieren Sie mich bitte, dann k&ouml;nnen
 wir das weitere Vorgehen abkl&auml;ren.<br>
+
 <br>
+
 <br>
+
 <span style="font-weight: bold;">Fenstermodus</span><br>
+
 Nemp kann alle Informationen in einem kompakten Fenster anzeigen, oder
 die jeweiligen Elemente in einzelnen Fenstern, die einzeln ein- und
 ausgeblendet werden k&ouml;nnen.<br>
+
 <br>
-<span style="font-style: italic;">Tipp: Sie k&ouml;nnen jederzeit mit den Tasten F7 und F8 zwischen den beiden M&ouml;glichkeiten hin- und herschalten.</span><br>
+
+<span style="font-style: italic;">Tipp: Sie k&ouml;nnen jederzeit mit der Taste F7&nbsp;zwischen den beiden M&ouml;glichkeiten hin- und herschalten.</span><br>
+
 <br>
+
 <br>
+
 <span style="font-weight: bold;">Verf&uuml;gbare Skins</span><br>
+
 Eine Auswahl der verf&uuml;gbaren Skins, die leider recht karg ist. Ich
 bin kein Grafiker, und eine Nemp-Community, die Spa&szlig; am
 Skin-basteln hat, gibt es nicht. ;-)<br>
+
 <br>
+
 <br>
+
 
 </body>
 </html>
