--- a/help/keyboardapps.html
+++ b/help/keyboardapps.html
@@ -3,12 +3,17 @@
 <head>
 
 
+
+  
   
   <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
 
+
   
 
 
+  
+  
   
   <title>Keyboard-Apps</title>
   <style title="" media="" type="text/css">
@@ -32,51 +37,67 @@ font-size: 12px;
 <body>
 
 
+
 <table style="text-align: left; width: 100%;" border="0" cellpadding="2" cellspacing="2">
+
 
 
   <tbody>
 
 
+
     <tr>
+
 
 
       <td style="width: 50px;"><img style="width: 47px; height: 27px;" src="hilfe.png" alt=""></td>
 
 
+
       <td>
       
+      
       <h2 class="head">Keyboard-Display</h2>
+
 
 
       </td>
 
 
+
     </tr>
 
 
+
+  
   
   </tbody>
 </table>
 
 
+
 <hr style="width: 100%; height: 2px;">
 <br>
+
 
 Seit Version 4.1 unterst&uuml;tzt Nemp das Anzeigen des aktuellen
 Titels (und auch&nbsp;die Steuerung) &uuml;ber das Display einer
 Tastatur wie z.B. der Logitech G15.&nbsp;<br>
 
+
 <br>
+
 
 Die Unterst&uuml;tzung ist nicht direkt in Nemp integriert, sondern
 wird &uuml;ber ein Zusatz-Tool realisiert. Dieses Tool nutzt die
 Nemp-API, um Informationen anzuzeigen und eine rudiment&auml;re
 Steuerung des Players zu erm&ouml;glichen. Eigentlich ging das schon
-lange, aber Nemp kann jetzt beim Start dieses Zuatz-Tool von sich aus
+lange, aber Nemp kann jetzt beim Start dieses Zusatz-Tool von sich aus
 starten.<br>
 
+
 <br>
+
 
 Da ich selbst nur im Besitz einer Logitech G15 bin, kann ich das nur
 mit dieser testen. Wenn jemand Interesse daran hat, das&nbsp;f&uuml;r
@@ -84,6 +105,7 @@ andere Tastaturen anzupassen, dann sollte das recht einfach machbar
 sein - bei Fragen einfach mit mir Kontakt aufnehmen. Die Nemp-API ist
 zum gro&szlig;en Teil kompatibel mit der von Winamp, wer also damit
 Erfahrung hat, kann das f&uuml;r Nemp sehr schnell anpassen. <br>
+
 
 </body>
 </html>
