--- a/help/optionen_k_suchoptionen.html
+++ b/help/optionen_k_suchoptionen.html
@@ -2,10 +2,15 @@
 <html>
 <head>
 
+
+  
   <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
+
+  
+
+
+  
   <title>Suchoptionen</title>
-
-
   <style title="" media="" type="text/css">
 .head { margin: 0px;
 padding: 0px;
@@ -26,121 +31,182 @@ font-size: 12px;
 
 <body>
 
+
 <table style="text-align: left; width: 100%;" border="0" cellpadding="2" cellspacing="2">
+
 
   <tbody>
 
+
     <tr>
+
 
       <td style="width: 50px;"><img style="width: 47px; height: 27px;" src="hilfe.png" alt=""></td>
 
+
       <td>
+      
       <h2 class="head">Suchoptionen</h2>
+
 
       </td>
 
+
     </tr>
 
+
+  
   </tbody>
 </table>
 
+
 <hr style="width: 100%; height: 2px;"><br>
+
 
 Nemp besitzt eine ziemlich gute Schnellsuche. Damit die Suche wirklich
 schnell funktioniert, muss etwas getrickst werden - man erkauft sich
 Geschwindigkeit mit mehr Speicherplatzbedarf.<br>
 
-<br>
 
 <br>
+
+
+<br>
+
 
 <span style="font-weight: bold;">Suche beschleunigen</span><br>
+
 
 Sie k&ouml;nnen steuern, ob und wenn ja in welcher Hinsicht die
 Suche beschleunigt werden soll. Wenn die Suche nicht beschleunigt wird,
 ist ein fl&uuml;ssiges Suchen "w&auml;hrend des Tippens" nicht
 unbedingt gew&auml;hrleistet.<br>
 
+
 Die Unteroptionen steuern dabei, ob sie den Dateinamen oder die
 Kommentare der Dateien mit in diese schnelle Schnellsuche
 &uuml;bernehmen wollen.<br>
 
+
 <br>
 
+
 <span style="font-style: italic;">Beispiel: </span><br style="font-style: italic;">
+
 
 <span style="font-style: italic;">Sie haben das Lied </span>"Ihr
 Kinderlein kommet"<span style="font-style: italic;"> von </span>"Die
 Roten Rosen"<span style="font-style: italic;"> gespeichert
 unter </span>"c:\Musik\Die Toten Hosen\Ihr Kinderlein kommet.mp3"<span style="font-style: italic;">. Sie geben im Suchfeld </span>"Hosen"<span style="font-style: italic;"> ein.<br>
 
+
 <br>
+
 
 </span>
 <table style="text-align: left; width: 507px; height: 92px;" border="1" cellpadding="2" cellspacing="2">
 
+
   <tbody>
 
+
     <tr>
+
 
       <td>Suche beschleunigt?</td>
 
+
       <td>Einschlie&szlig;lich Dateiname?</td>
+
 
       <td>Lied wird gefunden</td>
 
-    </tr>
-
-    <tr>
-
-      <td>ja</td>
-
-      <td>ja</td>
-
-      <td>ja</td>
 
     </tr>
 
+
     <tr>
+
 
       <td>ja</td>
 
-      <td>nein</td>
 
-      <td>nein</td>
+      <td>ja</td>
+
+
+      <td>ja</td>
+
 
     </tr>
 
+
     <tr>
 
+
+      <td>ja</td>
+
+
       <td>nein</td>
+
+
+      <td>nein</td>
+
+
+    </tr>
+
+
+    <tr>
+
+
+      <td>nein</td>
+
 
       <td>(-)</td>
 
+
       <td>ja</td>
+
 
     </tr>
 
+
+  
   </tbody>
 </table>
 
+
 <br>
+
 <br>
+
 <span style="font-weight: bold;">Optionen f&uuml;r die Schnellsuche</span><br>
+
 Es ist sch&ouml;n und bequem, wenn die Suche w&auml;hrend des Tippens
 l&auml;uft. Das sollte auf halbwegs aktuellen Rechnern auch immer
 m&ouml;glich sein. Ansonsten werden erst dann Suchtreffer angezeigt,
 wenn sie die Eingabe mit der Enter-Taste abschlie&szlig;en.<br>
+
 <br>
+
 Sie k&ouml;nnen zus&auml;tzlich zu den "korrekten" Suchtreffern weitere
 anzeigen, die "so ungef&auml;hr" passen. Das geht nicht ganz so schnell
 - da k&ouml;nnen schonmal 200 oder 300 Millisekunden vergehen - zuviel
 bei schnellen Tippern.<br>
+
 <br>
+
 <span style="font-style: italic;">Hinweis: Das Lied aus obigen Beispiel
 wird mit der ungef&auml;hren Suche immer gefunden, denn "Rosen" ist so
 ungef&auml;hr "Hosen".</span><br>
+
 <br>
+<span style="font-weight: bold;">Coverflow anpassen</span><br>
+Wenn dies aktiviert ist, wird bei der Schnellsuche auch der Coverflow
+aktualisiert. Es werden dann alle Alben aufgelistet, die ein St&uuml;ck
+enthalten, was f&uuml;r den Suchbegriff passt. beim Browsen im
+Coverflow werden dann auch jeweils&nbsp;die anderen St&uuml;cke auf dem
+Album bzw. dem Sampler angezeigt.<br>
+
 
 </body>
 </html>
