--- a/help/medienbib_weitereFunktionen.html
+++ b/help/medienbib_weitereFunktionen.html
@@ -2,10 +2,15 @@
 <html>
 <head>
 
+
+  
   <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type">
+
+  
+
+
+  
   <title>Medienbibliothek - weitere Funktionen</title>
-
-
   <style title="" media="" type="text/css">
 .head { margin: 0px;
 padding: 0px;
@@ -23,113 +28,174 @@ font-size: 12px;
 
 <body>
 
+
 <table style="text-align: left; width: 100%;" border="0" cellpadding="2" cellspacing="2">
+
 
   <tbody>
 
+
     <tr>
+
 
       <td style="width: 50px;"><img style="width: 47px; height: 27px;" src="hilfe.png" alt=""></td>
 
+
       <td>
+      
       <h2 class="head">Weitere Funktionen in der Medienbibliothek</h2>
+
 
       </td>
 
+
     </tr>
 
+
+  
   </tbody>
 </table>
 
+
 <hr style="width: 100%; height: 2px;"><br>
+
 <span style="font-weight: bold;">Computer nach Audiodateien untersuchen</span><br>
+
 Nemp durchsucht ihren Computer nach Audiodateien und f&uuml;gt diese in
 die Medienbibliothek ein. In den Optionen k&ouml;nnen Sie einstellen,
 welche Dateitypen (mp3, ogg, wav, ...) in die Bibliothek aufgenommen
 werden solen und welche nicht.<br>
+
 <br>
+
 <br>
+
 <span style="font-weight: bold;">Webradio Sender verwalten</span><br>
+
 Verwalten Sie Ihre Favoriten oder suchen sie in der Shoutcast-Datenbank nach Sendern, die Sie interessieren k&ouml;nnten.<br>
+
 <br>
+
 <br>
+
 <span style="font-weight: bold;">Sortieren nach ...</span><br>
+
 Sortiert die Liste der Titel im unteren Bereich nach den
 gew&uuml;nschten Kriterien. Sie k&ouml;nnen dazu auch auf den Kopf der
 jeweiligen Spalte klicken, um nach anderen Kritereien zu sortieren, die
 im Men&uuml; nicht aufgef&uuml;hrt sind.<br>
+
 <br>
+
 <br>
+
 <span style="font-weight: bold;">Browsen nach ...</span><br>
+
 &Auml;ndert die Kriterien in der Browseliste ("Artist- Album") oder die Sortierreihenfolge im Coverflow.<br>
+
 <br>
+
 <br>
+
 <span style="font-weight: bold;">Suche in der Medienbibliothek</span><br>
+
 &Ouml;ffnet ein weiteres Fenster mit einer detaillierten Suche. Hier
 k&ouml;nnen Sie zum Beispiel auch nach Liedtexten suchen, falls Sie die
 <a href="medienbib_pflege.html">Texte zu den Liedern gespeichert</a>
 haben. In den allermeisten F&auml;llen d&uuml;rfte aber die
 Schnellsuche im Hauptfenster ausreichend sein und schneller zum Ziel
 f&uuml;hren.<br>
+
 <br>
+
 <br>
+
 <span style="font-weight: bold;">Medienbibliothek l&ouml;schen</span><br>
+
 L&ouml;scht die gesamte Medienbibliothek. Dateien auf der Festplatte werden dabei nicht gel&ouml;scht.<br>
+
 <br>
+
 <br>
+
 <span style="font-weight: bold;">Medienbibliothek laden/speichern</span><br>
+
 L&auml;dt eine Medienbibliotheksdatei. In der regel ist das nicht
 n&ouml;tig - Nemp l&auml;dt und speichert die Medienbibliothek
 automatisch.<br>
+
 <br>
+
 <br>
+
 <span style="font-weight: bold;">Medienbibliothek aufr&auml;umen</span><br>
+
 &Uuml;berpr&uuml;ft, ob die Dateien in der Medienbibliothek noch
 vorhanden sind und entfernt diese ggf. aus der Liste. &Auml;nderungen
 am Dateisystem werden nicht vorgenommen.<br>
+
 <br>
+
 <br>
+
 <span style="font-weight: bold;">Exportieren als csv</span><br>
+
 Speichert die Medienbibliothek in einer csv-Datei ab, die Sie dann z.B. in Excel importieren und ausdrucken k&ouml;nnen.<br>
+
 <br>
+
 <br>
+
 <span style="font-weight: bold;">Markierte Dateien aus der Medienbiliothek entfernen</span><br>
+
 L&ouml;scht die markierten Dateien aus der Medienbibliothek. Die Dateien bleiben auf der Festplatte erhalten.<br>
+
 <br>
+
 <br>
+
 <span style="font-weight: bold;">Bewertung der markierten Dateien setzen auf ...</span><br>
+
 Setzt die Bewertung aller markierten Dateien auf den angegebenen Wert.
 &nbsp;Die Bewertung wird auch im ID3-Tag der mp3-Dateien gespeichert,
 deshalb kann dieser Vorgang bei vielen Dateien eine Zeitlang dauern.<br>
+
 <br>
+
 <br>
+
 <span style="font-weight: bold;">Lyrics holen</span><br>
+
 Sucht im Internet nach Liedtexten zu den markierten Dateien. Die Liedtexte werden auch im ID3-Tag der mp3-Dateien gespeichert.<br>
+
 <br>
+
 <br>
+
 <span style="font-weight: bold;">Zus&auml;tzliche Tags holen</span><br>
+
 &Uuml;bernimmt die h&auml;ufigsten Tags von LastFM f&uuml;r die
 markierten Lieder. Die zus&auml;tzlichen Tags werden auch im ID3-Tag
 der mp3-Dateien gespeichert.<br>
+
 <br>
+
 <br>
+
 <span style="font-weight: bold;">Alle Dateien neu einlesen</span><br>
+
 Liest die Informationen aus den Audiodateien in der Medienbibliothek
 neu ein, wenn diese z.B. &uuml;ber andere Programme ge&auml;ndert
 wurden.<br>
+
 <br>
+
+<span style="font-weight: bold;"></span><br>
+
 <br>
-<span style="font-weight: bold;">Bewertungen zur&uuml;cksetzen</span><br>
-Setzt die Bewertungen von allen Dateien zur&uuml;ck auf 0 (=
-undefiniert, 2.5 Sternchen). Wenn Sie die Bewertung an einigen Dateien
-zur&uuml;cksetzen, wird dies auch in den ID3-Tags der mp3-Dateien
-ge&auml;ndert.<br>
-Wenn sie alle Bewertungen zur&uuml;cksetzen, werden nur die in der
-Medienbibliothek gespeicherten Werte ge&auml;ndert. Die ID3-Tags
-bleiben dann unver&auml;ndert.<br>
+
 <br>
-<br>
-<br>
+
 
 </body>
 </html>
