--- a/help/optionen_3_Steuerung.html
+++ b/help/optionen_3_Steuerung.html
@@ -2,10 +2,15 @@
 <html>
 <head>
 
+
+  
   <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
+
+  
+
+
+  
   <title>Steuerung</title>
-
-
   <style title="" media="" type="text/css">
 .head { margin: 0px;
 padding: 0px;
@@ -26,50 +31,70 @@ font-size: 12px;
 
 <body>
 
+
 <table style="text-align: left; width: 100%;" border="0" cellpadding="2" cellspacing="2">
+
 
   <tbody>
 
+
     <tr>
+
 
       <td style="width: 50px;"><img style="width: 47px; height: 27px;" src="hilfe.png" alt=""></td>
 
+
       <td>
+      
       <h2 class="head">Steuerung</h2>
+
 
       </td>
 
+
     </tr>
 
+
+  
   </tbody>
 </table>
 
+
 <hr style="width: 100%; height: 2px;"><br>
 
+
 <span style="font-weight: bold;">Multimediatasten</span><br>
-Leider ein ganz besonderes Thema. &nbsp;Diese Tasten verhalten sich von
-System zu System sehr unterschiedlich. Auf 32-Bit-Systemen kann Nemp
-versuchen, die Multimediatasten global abzufangen um so auch dann auf
-diese Eingaben zu reagieren, wenn nemp nicht den Eingabefokus hat.<br>
-Auf Systemen mit Logitech iTouch darf dieses abfangen aber nicht passieren - das f&uuml;hrt zu sehr seltsamen Effekten.<br>
-&Uuml;ber die Konfiguration kann Nemp testen, ob iTouch oder ein vergleichbares System installiert ist.<br>
+F&uuml;r lange Zeit bei Nemp furchtbar kompliziert, seit Nemp 4.2
+endlich einfach. Nemp kann die Multimediatasten wie Play/pause, Stopp,
+n&auml;chster Titel usw. auch dann zur Steuerung verwenden, wenn Nemp
+nicht das aktive Fenster ist.<br>
+Die Tasten f&uuml;r die Lautst&auml;rke k&ouml;nnen dabei auf Wunsch
+ignoriert werden - diese Tasten steuern dann die globale
+Lautst&auml;rkensteuerung.<br>
 <br>
-<span style="font-weight: bold; font-style: italic;">Warnung: Auf 64-Bit-Systemen kann das zwar auch versucht werden, wird aber nicht empfohlen. </span><br>
+
 <br>
-<br>
+
 <span style="font-weight: bold;">Hotkey-Konfiguration</span><br>
+
 &Uuml;ber globale Hotkeys kann Nemp bedient werden, wenn es nicht den
 Eingabefokus hat. Sie sollten hier kombinationen w&auml;hlen, die nicht
 von Ihren anderen Programmen f&uuml;r andere zwecke benutzt werden.<br>
+
 <br>
+
 <br>
+
 <span style="font-weight: bold;">Tab-Taste</span><br>
+
 &Uuml;ber die Tabulator-Taste kann Nemp auch fast ohne die Maus
 gesteuert werden. Sie k&ouml;nnen hier einschr&auml;nken, ob einige
 Kontrollelemente &uuml;ber die Tab-Taste markiert werden kann.
 Andernfalls k&ouml;nnen Sie diese Buttons nur mit Hilfe der Maus
 bedienen.<br>
+
 <br>
+
 
 </body>
 </html>
