--- a/help/nemp_start.html
+++ b/help/nemp_start.html
@@ -3,12 +3,17 @@
 <head>
 
 
+
+  
   
   <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type">
 
+
   
 
 
+  
+  
   
   <title>Nemp: Noch ein mp3-Player</title>
   <style title="" media="" type="text/css">
@@ -29,133 +34,181 @@ font-size: 12px;
 <body>
 
 
+
 <table style="text-align: left; width: 100%;" border="0" cellpadding="2" cellspacing="2">
+
 
 
   <tbody>
 
 
+
     <tr>
+
 
 
       <td style="width: 50px;"><img style="width: 47px; height: 27px;" src="hilfe.png" alt=""></td>
 
 
+
       <td>
       
+      
       <h2 class="head">Nemp: Noch ein mp3-Player</h2>
+
 
 
       </td>
 
 
+
     </tr>
 
 
+
+  
   
   </tbody>
 </table>
 
 
+
 <hr style="width: 100%; height: 2px;"><br>
+
 
 
 Ein mp3-Player f&uuml;r Windows<br>
 
 
+
 Aktuelle Version: 4.2<br>
 
 
+
 <br>
+
 
 
 &copy; 2005-2011 Daniel 'Gausi' Gau&szlig;mann<br>
 
 
+
 www.gausi.de, mail@gausi.de<br>
+
 
 
 <br>
 
 
+
 <div style="text-align: left;"><img style="width: 155px; height: 112px;" alt="nemp" src="nemp.png"><br>
+
 
 
 </div>
 
 
+
 <h3><br>
+
 </h3>
+
 <h3>Neu in Version 4.2 (Auszug)</h3>
 
 
+
 <ul style="list-style-type: circle;">
-  <li>Multimediatasten sollte jetzt endlich vern&uuml;nftig funktionieren</li>
+
+  <li>Multimediatasten sollten jetzt endlich vern&uuml;nftig funktionieren</li>
+
   <li>Strg+V f&uuml;gt Dateien in der Playlist jetzt an der markierten Stelle ein</li>
+
   <li>Wizard hinzugef&uuml;gt, der einige grundlegende Einstellungen abfragt</li>
+
   <li>Alles, was im Hintergrund passiert und Musikdateien &auml;ndert
 oder neue Dateien erstellt (mit Ausnahme der Konfigurationsdateien,
 Medienbibliothek, Playlist usw. im "Daten"-Verzeichnis), ist jetzt
 Opt-In, d.h. es muss explizit erlaubt werden. Genau diese Dinge fragt
 der Wizard ab.</li>
+
 </ul>
+
 
 
 <h3>Neu in Version 4.1 (Auszug)</h3>
 
 
+
 <ul style="list-style-type: circle;">
+
 
 
   <li>Unterst&uuml;tzung von Ogg- und Flac-Tags</li>
 
+
   <li>Kopieren der Playlist inklusiver passender m3u-Datei durch Strg+Shift+C</li>
+
 
   <li>Funktion "Playlist in Verzeichnis kopieren" (z.B. auf einen USB-Stick) mit Umbenennung der Dateien</li>
 
+
   <li>Push-To-Talk durch F8 (&auml;hnlich der Jingles)</li>
+
 
   <li>Unterst&uuml;tzung f&uuml;r das Display der Logitech G15 (andere
 Tastaturen k&ouml;nnen nachger&uuml;stet werden, wenn das jemand machen
 m&ouml;chte)</li>
 
 
+
 </ul>
+
 
 
 <h3>Neu in Version 4.0 (Auszug)</h3>
 
 
+
 <ul style="list-style-type: circle;">
+
 
 
   <li>Sch&ouml;nerer Coverflow mit automatischem
 Cover-Download</li>
 
 
+
   <li>Browsemodus "Tagwolke"</li>
+
 
 
   <li>Einfachere Bearbeitung der mp3-Dateien</li>
 
 
+
   <li>Unterst&uuml;tzung f&uuml;r Windows 7</li>
+
 
 
   <li>Partymodus mit vergr&ouml;&szlig;erter Ansicht und
 reduzierten Funktionen</li>
 
 
+
   <li>Vormerk-Liste f&uuml;r die Playlist</li>
+
 
 
   <li>...</li>
 
 
+
 </ul>
 
 
+
 <br>
+
 
 
 </body>
