--- a/bin/HTML/Party/help.html
+++ b/bin/HTML/Party/help.html
@@ -14,7 +14,7 @@
 	<li class="player"><a href="player"><img class="menuicon" src="images/playback-start.png" width="32" height="32" alt="player">Player</a></li>
 	<li class="playlist"><a href="playlist"><img class="menuicon" src="images/list.png" width="32" height="32" alt="playlist">Playlist</a></li>
 	<li class="library"><a href="browse?mode=genre"><img class="menuicon" src="images/library.png" width="32" height="32" alt="library">Library</a></li>
-	<li class="help"><a href="/help" title="Help"><img class="menuicon" src="images/info.png" width="32" height="32" alt="info"></a></li>
+	<li class="help"><a href="/help.html" title="Help"><img class="menuicon" src="images/info.png" width="32" height="32" alt="info"></a></li>
 </ul>
 </div>
 
