Fixed MessagDlg button captions helpfile, readme, version... 4.4 is almost done!

--- a/help/optionen_b_Playlist.html
+++ b/help/optionen_b_Playlist.html
@@ -2,10 +2,15 @@
 <html>
 <head>
 
+
+  
   <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
+
+  
+
+
+  
   <title>Playlist</title>
-
-
   <style title="" media="" type="text/css">
 .head { margin: 0px;
 padding: 0px;
@@ -26,73 +31,108 @@ font-size: 12px;
 
 <body>
 
+
 <table style="text-align: left; width: 100%;" border="0" cellpadding="2" cellspacing="2">
+
 
   <tbody>
 
+
     <tr>
+
 
       <td style="width: 50px;"><img style="width: 47px; height: 27px;" src="hilfe.png" alt=""></td>
 
+
       <td>
+      
       <h2 class="head">Playlist</h2>
+
 
       </td>
 
+
     </tr>
 
+
+  
   </tbody>
 </table>
 
+
 <hr style="width: 100%; height: 2px;"><br>
 
+
 <span style="font-weight: bold;">Standardaktion f&uuml;r Audiodateien</span><br>
+
 Regelt das Verhalten, wenn Sie in der Medienliste einen Doppelklick auf ein Lied ausf&uuml;hren. Sie k&ouml;nnen dabei<br>
+
 <ul style="list-style-type: circle;">
+
   <li>das St&uuml;ck am Ende der Playlist einf&uuml;gen</li>
+
   <li>die aktuelle Playlist l&ouml;schen und mit dem markierten St&uuml;ck eine neue playlist beginnen</li>
-  <li>das St&uuml;ck &nbsp;hinter den aktuellen (bzw. ans Ende der Vormerk-Liste) einf&uuml;gen</li>
+
+  <li>das St&uuml;ck hinter den aktuellen Titel einf&uuml;gen</li>
+
   <li>das St&uuml;ck einfach abspielen, ohne die Playlist zu
 ver&auml;ndern. Die Wiedergabe der Playlist wird dann unterbrochen und
 nach Ende des markierten St&uuml;ckes fortgesetzt.</li>
+
 </ul>
+
 <br>
+
 <span style="font-weight: bold;">Zufallswiedergabe</span><br>
+
 Auch wenn es einem intuitiv so gar nicht klar ist: Bei einer wirklich
 zuf&auml;lligen Wiedergabe kommt es recht h&auml;ufig dazu, dass ein
 Lied zweimal innerhalb kurzer Zeit abgespielt wird. Nemp kann das bis
 zu einem gewissen Grad vermeiden.<br>
+
 Mit dem Schieberegler k&ouml;nnen Sie den Anteil der Playlist
 einstellen, der mindestens abgespielt werden muss, bevor ein Titel
 wiederholt werden darf.<br>
+
 <br>
+
 <br>
+
 <span style="font-weight: bold;">Verhalten der Playlist</span><br>
+
 <ul style="list-style-type: circle;">
+
   <li>Dateien beim Start untersuchen bedeutet, dass die Audiodateien
 beim laden aus der Playlist untersucht werden, und sich nicht darauf
 verlassen wird, dass die Daten f&uuml;r z.B. Dauer aus der
 Playlist-Datei korrekt sind.</li>
+
   <li>Vollst&auml;ndig abgespielte Dateien k&ouml;nnen automatisch aus
 der Playlist entfernt werden. Sie k&ouml;nnen das automatische
 L&ouml;schen unterbinden, wenn Sie w&auml;hrend der Wiedergabe im Titel
 spulen, zwischen durch pausieren, stoppen oder manuell zum
 n&auml;chsten Titel springen.</li>
+
   <li>Nemp kann die Playlist automatisch alle 5 Mniuten sichern. Sollte
 Nemp doch einmal abst&uuml;rzen, wird beim n&auml;chsten Start
 automatisch diese tempor&auml;re Playlist geladen.</li>
+
   <li>Nach dem letzten St&uuml;ck neu mischen bewirkt ein mischen der
 Playlist, wenn sie einmal durchgelaufen ist. Das bewirkt dann eine Art
 zuf&auml;llige Wiedergabe, auch wenn der Wiedergabemodus auf "Alles
 Wiederholen" steht.</li>
+
   <li>Wenn Sie auf "N&auml;chster Titel" klicken, kann Nemp entweder
 zum n&auml;chsten Eintrag in der Playlist springen, oder nur zum
 n&auml;chsten Eintrag im Cuesheet zur aktuellen Datei. Mehr dazu <a href="cuesheets.html">hier</a>.</li>
+
   <li>Wenn Sie einen Titel direkt aus der Medienbibliothek abspielen
 (s.o., letzter Punkt), k&ouml;nnen Sie einstellen, ob die Playlist das
 unterbrochene St&uuml;ck von Anfang an wiedergeben soll, oder an der
 unterbrochenen Stelle starten soll.</li>
+
 </ul>
+
 
 </body>
 </html>
