--- a/help/optionen_i_webserver.html
+++ b/help/optionen_i_webserver.html
@@ -2,10 +2,15 @@
 <html>
 <head>
 
+
+  
   <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
+
+  
+
+
+  
   <title>Webserver</title>
-
-
   <style title="" media="" type="text/css">
 .head { margin: 0px;
 padding: 0px;
@@ -26,31 +31,74 @@ font-size: 12px;
 
 <body>
 
+
 <table style="text-align: left; width: 100%;" border="0" cellpadding="2" cellspacing="2">
+
 
   <tbody>
 
+
     <tr>
+
 
       <td style="width: 50px;"><img style="width: 47px; height: 27px;" src="hilfe.png" alt=""></td>
 
+
       <td>
+      
       <h2 class="head">Webserver</h2>
+
 
       </td>
 
+
     </tr>
 
+
+  
   </tbody>
 </table>
 
+
 <hr style="width: 100%; height: 2px;"><br>
+
 
 Konfigurieren Sie den Nemp Webserver, um ihren Freunden im lokalen Netz
 oder auch vom anderen Ende der Welt Zugriff auf ihre Medienbibliothek
 zu geben.<br>
+
 <br>
-Mehr dazu <a href="webserver.html">hier</a>.<br>
+
+Mehr&nbsp;zum Webserver <a href="webserver.html">hier</a>.<br>
+<br>
+<span style="font-weight: bold;">Konfiguration</span><br>
+<ul style="list-style-type: circle;">
+  <li>&Uuml;ber das Theme kann das Aussehen und der Funktionsumfang
+festgelegt werden. Zum Anlegen weiterer Themes sei auf die
+Dokumentation im Ordner &lt;Nemp&gt;\HTML\ verwiesen</li>
+  <li>Der Port ist standardm&auml;&szlig;ig 80 (http), kann aber
+ge&auml;ndert werden, wenn z.B. Parallel ein "echter" Webserver (z.B.
+mit xampp) betrieben wird.</li>
+  <li>Der Zugriff &nbsp;kann auf das lokale Netz beschr&auml;nkt werden</li>
+  <li>Der Webserver kann auch direkt mit Nemp gestartet werden.</li>
+  <li>Als Administrator hat man ggf. weitere Zugriffsm&ouml;glichkeiten (aktuell nur im Theme "Party")</li>
+</ul>
+<span style="font-weight: bold;">User Berechtigungen</span><br>
+Auch wenn &uuml;ber das Theme eingestellt werden kann, welche
+Funktionen im Browser auftauchen, so sind diese dann nicht blockiert,
+wenn z.B. ein erfahrerener Nemp-Nutzer die betreffenden Kommandos
+direkt in die Adresszeile eintippt.<br>
+Das kann durch das Setzen (bzw. Entfernen) der User-Berechtigungen verhindert werden. <br>
+Das bewirkt dann, dass erstens die entsprechenden Links nicht im
+Browser auftauchen, auch wenn sie im Theme vorgesehen sind und
+zweitens, dass manuelle Kommandos ignoriert werden.<br>
+<br>
+<span style="font-weight: bold;">Eigene IP-Adressen</span><br>
+Auflistung der lokalen IP-Adresse(n). &Uuml;ber diese ist der
+Nemp-Webserver im lokalen Netz erreichbar. F&uuml;r Zugriff von
+au&szlig;erhalb ist die "Internet-IP" erforderlich, die per Klick auf
+den Button ermittelt werden kann (das l&auml;uft &uuml;ber ein
+PHP-Script auf www.gausi.de)
 
 </body>
 </html>
