Webserver: replaced facebook-like-button, fixed some admin-bugs in Party-theme

--- a/bin/HTML/Default/help.html
+++ b/bin/HTML/Default/help.html
@@ -42,7 +42,7 @@ access to common controls like 'play/pause', 'next/previous title', volume contr
 
 <div style="text-align:center"><a class="button" title="Vote for this title"><img src="images/vote.png" width="24" height="24" alt="vote this file" /></a></div>
 
-<p>This has nothing to do with facebook. Voting for a file means <i>'I like this file, and I want to hear it soon'</i>. 
+<p>Voting for a file means <i>'I like this file, and I want to hear it soon'</i>. 
 Tracks with many votes will be played earlier than tracks with less or no votes. On the playlist page you can see the amount
 of votes for every file (if there are any). You can vote for a file more than once, but only once per minute. All votes for a track will be deleted, when the playback of this track begins. 
 </p>
