--- a/bin/HTML/Party/help.html
+++ b/bin/HTML/Party/help.html
@@ -14,7 +14,7 @@
 	<li class="player"><a href="player"><img class="menuicon" src="images/playback-start.png" width="32" height="32" alt="player">Player</a></li>
 	<li class="playlist"><a href="playlist"><img class="menuicon" src="images/list.png" width="32" height="32" alt="playlist">Playlist</a></li>
 	<li class="library"><a href="browse?mode=genre"><img class="menuicon" src="images/library.png" width="32" height="32" alt="library">Library</a></li>
-	<li class="help"><a href="/help.html" title="Help"><img class="menuicon" src="images/info.png" width="32" height="32" alt="info"></a></li>
+	<li class="help"><a href="help.html" title="Help"><img class="menuicon" src="images/info.png" width="32" height="32" alt="info"></a></li>
 </ul>
 </div>
 
@@ -42,7 +42,7 @@ access to common controls like 'play/pause', 'next/previous title', volume contr
 
 <div style="text-align:center"><a class="button" title="Vote for this title"><img src="images/vote.png" width="24" height="24" alt="vote this file" /></a></div>
 
-<p>This has nothing to do with facebook. Voting for a file means <i>'I like this file, and I want to hear it soon'</i>. On the playlist page you can see the amount
+<p>Voting for a file means <i>'I like this file, and I want to hear it soon'</i>. On the playlist page you can see the amount
 of votes for every file. If you see no votes, then nobody voted for this file yet. You can vote for a file more than once, but only once per minute.
 </p>
 <p>On a more private party, where the DJ trusts you, you may have more options to control the playlist, like 'play now',
