help file corrected, About dialog changed

--- a/help/optionen_a_player-einstellungen.html
+++ b/help/optionen_a_player-einstellungen.html
@@ -2,10 +2,15 @@
 <html>
 <head>
 
+
+  
   <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
+
+  
+
+
+  
   <title>Player-Einstellungen</title>
-
-
   <style title="" media="" type="text/css">
 .head { margin: 0px;
 padding: 0px;
@@ -26,44 +31,73 @@ font-size: 12px;
 
 <body>
 
+
 <table style="text-align: left; width: 100%;" border="0" cellpadding="2" cellspacing="2">
+
 
   <tbody>
 
+
     <tr>
+
 
       <td style="width: 50px;"><img style="width: 47px; height: 27px;" src="hilfe.png" alt=""></td>
 
+
       <td>
+      
       <h2 class="head">Player-Einstellungen</h2>
+
 
       </td>
 
+
     </tr>
 
+
+  
   </tbody>
 </table>
 
+
 <hr style="width: 100%; height: 2px;"><br>
 
+
 <span style="font-weight: bold;">Ausgabeger&auml;te</span><br>
+
 Steuert, auf welchem Ger&auml;t die Hauptausgabe und die
 Kopfh&ouml;rerausgabe stattfindet. Wenn Sie zwei Soundkarten in Ihrem
 Rechner eingebaut haben, k&ouml;nnen Sie dadurch z.B. auf einem
 Kopfh&ouml;rer an der einen Soundkarte etwas anderes h&ouml;ren als auf
 der Hauptausgabe.<br>
+
 <br>
+
 <br>
+
 <span style="font-weight: bold;">Fading</span><br>
+
 Steuert, ob und wie zwischen einzelnen St&uuml;cken &uuml;bergeblendet wird. <br>
+
 <ul style="list-style-type: circle;">
+
   <li>Ein Fading zwischen zwei Titeln sorgt f&uuml;r einen sanften &Uuml;bergang von einem Titel zum n&auml;chsten</li>
+
   <li>Ein Fading bei Positionswechsel sorgt f&uuml;r ein nicht ganz so
 abruptes springen innerhalb eines Titels, wenn Sie &uuml;ber den
 Schieberegeler im Hauptfenster an eine andere Position im Titel
 springen.</li>
+
 </ul>
+
 Das Fading kann bei kurzen St&uuml;cken ignoriert werden, oder wenn Sie den Stopp- oder Pause-Button anklicken.<br>
+<br>
+<span style="font-weight: bold;">Stille erkennen</span><br>
+Nemp kann automatisch die Stille am Ende eines Tracks erkennen und
+&uuml;berspringen. Die Wiedergabe des neuen Titels wird eingeleitet,
+wenn die Lautst&auml;rke unter den Schwellwert sinkt. Bei aktiviertem
+Fading wird der Wechsel entsprechend vorher eingeleitet.<br>
+
 
 </body>
 </html>
