--- a/help/optionen_1_allgemein.html
+++ b/help/optionen_1_allgemein.html
@@ -3,12 +3,17 @@
 <head>
 
 
+
+  
   
   <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
 
+
   
 
 
+  
+  
   
   <title>Allgemeine Einstellungen</title>
   <style title="" media="" type="text/css">
@@ -32,55 +37,84 @@ font-size: 12px;
 <body>
 
 
+
 <table style="text-align: left; width: 100%;" border="0" cellpadding="2" cellspacing="2">
+
 
 
   <tbody>
 
 
+
     <tr>
+
 
 
       <td style="width: 50px;"><img style="width: 47px; height: 27px;" src="hilfe.png" alt=""></td>
 
 
+
       <td>
       
+      
       <h2 class="head">Allgemeine Einstellungen</h2>
+
 
 
       </td>
 
 
+
     </tr>
 
 
+
+  
   
   </tbody>
 </table>
 
 
+
 <hr style="width: 100%; height: 2px;"><br>
 
 
+
 <span style="font-weight: bold;">Beim Starten von Nemp</span><br>
+
 <ul style="list-style-type: circle;">
+
   <li>Beim Start mit der Wiedergabe beginnen.</li>
+
   <li>Letzte Position im Track speichern. &nbsp;Wiedergabe genau dort
 fortf&uuml;hren, wo sie beim letzten Mal unterbrochen wurde. besonders
 sinnvoll bei langen Titeln, z.B. H&ouml;rb&uuml;chern.</li>
+
   <li>Falls verf&uuml;gbar: Wiedergabe mit neuer Datei beginnen. Spielt
 beim Start die Datei ab, die per Doppelklick im Explorer abgespielt
 wird und die das Starten von Nemp bewirkt hat.</li>
+  <li>Zur eingef&uuml;gten Datei wechseln (auch wenn gerade ein anderes
+Lied gerade abgespielt wird). Wechselt bei laufendem Player zum neu
+eingef&uuml;gten Titel, wenn dieser per Doppelklick im Windows-Explorer
+gestartet wird.</li>
+
   <li>Lade/Speichere Medienbibliothek beim Start. Ist das H&auml;kchen
 hier nicht gesetzt, wird die Medienbibliothek beim Start nicht geladen
 und am Ende nicht gespeichert.</li>
+  <li>Zeige Splashscreen: Erlaubt das Ausblenden des Splashscreens beim Starten von Nemp.</li>
+
   <li>Mehrere Instanzen erlauben. Normalerweise sollte Nemp nur einmal gestartet werden, nicht mehrmals.</li>
+
   <li>Minimiert starten. zeigt beim Start nicht das Programmfenster, sondern minimiert es direkt.</li>
+
   <li>Im Vordergrund halten. Beh&auml;lt im Einzelfenster-Modus den Playerteil im Vordergrund</li>
+
 </ul>
+
 <span style="font-weight: bold;"><br>
+
 Nemp Auto-Updater</span><br>
+
 Geben Sie an, ob und wenn ja wie oft Nemp nach Updates suchen soll, und
 ob Sie auch bei neuen Beta-Versionen benachrichtigt werden wollen.
 </body>
