Modified Help file (not complete yet)

--- a/help/optionen_7_Ansicht.html
+++ b/help/optionen_7_Ansicht.html
@@ -2,15 +2,10 @@
 <html>
 <head>
 
-
-  
   <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
+  <title>Anzeige</title>
 
-  
 
-
-  
-  <title>Ansicht</title>
   <style title="" media="" type="text/css">
 .head { margin: 0px;
 padding: 0px;
@@ -31,123 +26,55 @@ font-size: 12px;
 
 <body>
 
-
 <table style="text-align: left; width: 100%;" border="0" cellpadding="2" cellspacing="2">
-
 
   <tbody>
 
-
     <tr>
-
 
       <td style="width: 50px;"><img style="width: 47px; height: 27px;" src="hilfe.png" alt=""></td>
 
-
       <td>
-      
-      <h2 class="head">Ansicht</h2>
-
+      <h2 class="head">Anzeige</h2>
 
       </td>
 
-
     </tr>
 
-
-  
   </tbody>
 </table>
 
-
 <hr style="width: 100%; height: 2px;"><br>
 
-
-<span style="font-weight: bold;">Folgende Spalten in der
-Medienliste anzeigen</span><br>
-
-
-Auswahl der sichtbaren Spalten in der Medienbibliothek.<br>
-
-
-<br>
-
-
-<span style="font-style: italic;">Tipp: Sie
+Geben Sie an, welche Dinge wie angezeigt werden sollen.<br>
+<h3>Anzeige</h3>
+<ul style="list-style-type: circle;">
+  <li>Auswahl der sichtbaren Spalten in der Titelanzeige der Medienbibliothek.<br>
+    <span style="font-style: italic;">Tipp: Sie
 k&ouml;nnen die Auswahl auch &uuml;ber einen Rechtsklick auf
-die Spalten&uuml;berschriften im Hauptfenster &auml;ndern.</span><br>
-
-
-<br>
-
-
-<br>
-
-
-<span style="font-weight: bold;">Browsen in der
-Medienbibliothek</span><br>
-
-
-<ul style="list-style-type: circle;">
-
-
-  <li>Eingabe von weiteren Kombinationen f&uuml;r die
-klassische Ansicht, die &uuml;ber das <a href="nemp_medienbib.html">Men&uuml;</a> nicht
-verf&uuml;gbar sind</li>
-
-
-  <li>Eingabe der Sortierung im Coverflow</li>
-
-
-  <li>Einstellung, ob Gruppen von Dateien ohne
-vern&uuml;nftige Album-Information ("N/A") im Coverflow angezeigt
-werden sollen oder nicht</li>
-
-
+die Spalten&uuml;berschriften im Hauptfenster &auml;ndern.</span></li>
+  <li>Sortierung beim Browsen in der Medienbibliothek</li>
+  <li>Titelanzeige immer sortieren oder nicht</li>
 </ul>
 
 
+<h3>Partymodus</h3>
+Vor einiger Zeit schrieb mich jemand an, dass Nemp ein ganz toller Player f&uuml;r 
+Parties sei, weil jeder sofort damit klarkommt und man die Lieder wirklich 
+schnell findet.<br>
+Nur leider werden die Kn&ouml;ppe immer kleiner, wenn man ein paar 
+Bier getrunken hat und man klickt st&auml;ndig daneben ... stimmt.<br>
 <br>
-
-
-<span style="font-weight: bold;">Cover &amp; Details</span><br>
-
-
-Angabe, ob und wo im unteren Bereich der Medienbibliothek das Cover zur
-ausgew&auml;hlten Datei mit weiteren Informationen eingeblendet
-werden soll.<br>
-
-
+Im Partymodus werden wichtige Bedienelemente gr&ouml;&szlig;er
+dargestellt, und bestimmte Funktionen k&ouml;nnen deaktiviert werden.<br>
 <br>
-
-
-<span style="font-style: italic;">Tipp: Die Anzeige des
-Covers k&ouml;nnen Sie auch &uuml;ber einen Rechtskllick auf
-die Spalten&uuml;berschriften (s.o.) im hauptfenster
-&auml;ndern. Die Anzeige der zusatz-Informationen dort
-k&ouml;nnen Sie mit Strg+R rotieren lassen.</span>
-<br>
-
+<span style="font-style: italic;">Tipp: Sperren Sie am besten auf Parties den Nemp-Rechner komplett, und bieten Sie ihren G&auml;sten die Nutzung des Nemp <a href="webserver.html">Webservers</a> an. Eine ausf&uuml;hrliche Anleitung inklusive WLAN-Aufbau finden Sie auf www.gausi.de</span><br>
+<h3>Erweiterte Einstellungen</h3>
+W&auml;hlen Sie die Scrollgeschwindigkeit der Titelanzeige, setzen Sie
+Schriftarten f&uuml;r unterschiedliche Datei-Qualit&auml;ten und einige
+weitere Dinge, die hin und wieder gebraucht werden, aber in der Regel
+eher nicht.<br>
 
 <br>
-
-<br>
-
-<span style="font-weight: bold;">Sonstiges</span><br>
-
-<ul style="list-style-type: circle;">
-
-  <li>ganze Zeile oder nur ein einzelnes Feld in der Medienbibliothek markieren</li>
-
-  <li>Hinweise in Medienbibliothek zeigen (diese kleinen gelben
-Fensterchen die aufgehen, wenn man die Maus eine zeitlang nicht bewegt)</li>
-
-  <li>Hinweise in der Playliste zeigen</li>
-  <li>Dateien bearbeiten bei Klick erm&ouml;glicht das bearbeiten
-einiger Informationen in der Listenansicht, wenn Sie langsam zweimal
-darauf klicken. Ansonsten geht das immer &uuml;ber die&nbsp;Taste F2.</li>
-
-</ul>
-
 </body>
 </html>
