--- a/help/webradio_verwaltung.html
+++ b/help/webradio_verwaltung.html
@@ -2,10 +2,15 @@
 <html>
 <head>
 
+
+  
   <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type">
+
+  
+
+
+  
   <title>Webradio-Verwaltung</title>
-
-
   <style title="" media="" type="text/css">
 .head { margin: 0px;
 padding: 0px;
@@ -23,72 +28,86 @@ font-size: 12px;
 
 <body>
 
+
 <table style="text-align: left; width: 100%;" border="0" cellpadding="2" cellspacing="2">
+
 
   <tbody>
 
+
     <tr>
+
 
       <td style="width: 50px;"><img style="width: 47px; height: 27px;" src="hilfe.png" alt=""></td>
 
+
       <td>
+      
       <h2 class="head">Verwaltung von Webradio</h2>
+
 
       </td>
 
+
     </tr>
 
+
+  
   </tbody>
 </table>
 
+
 <hr style="width: 100%; height: 2px;"><br>
+
 Nemp kann nicht nur Dateien verwalten, sondern auch eine Liste von Webradio-Sendern, die Sie regelm&auml;&szlig;ig h&ouml;ren.<br>
+
 <br>
+
 <span style="font-weight: bold;">Webradio - Favoriten</span><br>
+
 In der klassischen Browse-Ansicht werden neben den Dateien auch die
 bevorzugten Webradio-Sender angezeigt. Sie k&ouml;nnen diese Liste
 &uuml;ber das Men&uuml; "Medienbibliothek -&gt; Webradio-Sender
 verwalten" bearbeiten.<br>
+
 Unter "Favoriten" k&ouml;nnen Sie neue Sender hinzuf&uuml;gen. Den
 Namen k&ouml;nnen Sie frei w&auml;hlen, als URL sollten Sie die Adresse
 des Senders eingeben. Sehr h&auml;ufig bekommt man diese auf der
 jeweiligen Webseite - in der Regel findet sich dort ein Link, der
 auf&nbsp;*.pls endet. Diesen Link m&uuml;ssen Sie im URL-Feld eintragen.<br>
+
 <br>
-<span style="font-style: italic;">Hinweis: Viele Sender bieten
+
+<span style="font-style: italic;">Tipp: Viele Sender oder Webseiten bieten
 unterschiedliche Links f&uuml;r den Windows Media Player, Winamp oder
-den real Player an. Am besten sollte Nemp mit dem Winamp-Link
+den Real Player an. Am besten sollte Nemp mit dem Winamp-Link
 klarkommen.</span><br>
+
 <br>
+
 Sie k&ouml;nnen die Favoriten Liste auch Ihren W&uuml;nschen entsprechend sortieren.<br>
+
 <br>
-<br>
-<span style="font-weight: bold;">www.shoutcast.com</span><br>
-Auf www.shoutcast.com gibt es eine fast unz&auml;hlige Auswahl von
-Radiostationen. Auf dieser Webseite gibt es auch eine Suchfunktion, die
-Sie auch direkt von Nemp aus benutzen k&ouml;nnen.<br>
-Suchen Sie einfach nach einem Sendernamen, oder einen Interpreten, den
-Sie h&ouml;ren m&ouml;chten und w&auml;hlen Sie einen Sender aus der
-Trefferliste aus. Beachten Sie bitte, dass der angezeigte aktuelle
-Titel nicht immer stimmt. Die Pflege dieser Information liegt in der
-Verantwortung des Senders, und nicht alle liefern dort minuten-aktuelle
-Daten.<br>
-<br>
-Sie k&ouml;nnen einen Sender per Doppelklick in die Playlist einf&uuml;gen, oder ihre Favoritenliste erg&auml;nzen.<br>
-<br>
-<br>
+
+<span style="font-weight: bold;"></span><br>
+
 <span style="font-weight: bold;">Stream-Playlist parsen</span><br>
+
 Viele Sender bieten eine *.pls-Datei zum Anh&ouml;ren an. Das ist
 eigentlich ein Playlisten-Format, in dem mehrere Dateien oder Adressen
 angegeben sein k&ouml;nnen. Bei Webradio-Sendern werden oft mehrere
 Adressen angegeben, die alle dasselbe senden, aber die Last auf mehrere
 Server verteilen.<br>
+
 Nemp bietet die M&ouml;glichkeit, all diese Adressen in die Playlist
 aufzunehmen - dann erscheint ein Sender ggf. mehrfach in der Playlist.
 Ansonsten w&auml;hlt Nemp intern eine zuf&auml;llige Adresse aus dieser
 Liste aus.<br>
+
 <br>
+
 <br>
+
 
 </body>
 </html>
