--- a/help/optionen_a_player-einstellungen.html
+++ b/help/optionen_a_player-einstellungen.html
@@ -3,12 +3,17 @@
 <head>
 
 
+
+  
   
   <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
 
+
   
 
 
+  
+  
   
   <title>Player-Einstellungen</title>
   <style title="" media="" type="text/css">
@@ -32,71 +37,108 @@ font-size: 12px;
 <body>
 
 
+
 <table style="text-align: left; width: 100%;" border="0" cellpadding="2" cellspacing="2">
+
 
 
   <tbody>
 
 
+
     <tr>
+
 
 
       <td style="width: 50px;"><img style="width: 47px; height: 27px;" src="hilfe.png" alt=""></td>
 
 
+
       <td>
       
+      
       <h2 class="head">Player-Einstellungen</h2>
+
 
 
       </td>
 
 
+
     </tr>
 
 
+
+  
   
   </tbody>
 </table>
 
 
+
 <hr style="width: 100%; height: 2px;"><br>
 
 
-<span style="font-weight: bold;">Ausgabeger&auml;te</span><br>
 
-Steuert, auf welchem Ger&auml;t die Hauptausgabe und die
-Kopfh&ouml;rerausgabe stattfindet. Wenn Sie zwei Soundkarten in Ihrem
-Rechner eingebaut haben, k&ouml;nnen Sie dadurch z.B. auf einem
-Kopfh&ouml;rer an der einen Soundkarte etwas anderes h&ouml;ren als auf
-der Hauptausgabe.<br>
-
+Stellen Sie den Player nach ihren W&uuml;nschen ein.<br>
+<br>
+<span style="font-style: italic;">Tipp: F&uuml;r einen &Uuml;bergang
+zwischen zwei Titeln in der Playlist ohne Stille aktivieren sie "Stille
+erkennen" und "Fading". Je n&auml;her der Schwellwert an 0dB liegt,
+desto fr&uuml;her wird der neue Titel gestartet.<br>
+<br>
+</span>
+<h3>Playlist</h3>
+<span style="font-style: italic;">Standardaktion f&uuml;r Audiodateien </span>wirkt
+sich auf das Einf&uuml;gen per Doppelklick oder &lt;Enter&gt; von der
+Titelanzeige der Medienbibliothek in die Playlist aus.<br>
+<br>
+<span style="font-style: italic;">Standardaktion f&uuml;r Kopfh&ouml;rer</span> wirkt sich auf das Einf&uuml;gen vom Kopfh&ouml;rer-Player in die Playlist aus, wenn Sie auf den Button <img style="width: 24px; height: 24px;" alt="headsetbtn" src="BtnHeadsetToPlaylist.png" align="middle"> klicken.<br>
+<br>
+<span style="font-style: italic;">Merke Position im aktuellen Track beim Abspielen direkt aus der Medienbibliothek</span>
+bewirkt, dass bei "Datei einfach abspielen" als Standardaktion und
+Klick auf "n&auml;chster Titel" die Wiedergabe der Playlist genau dort
+fortgef&uuml;hrt wird, wo sie vorher unterbrochen wurde.<br>
+<span style="font-style: italic;">Tipp: Damit ist ein schnelles Reinh&ouml;ren in einen Titel m&ouml;glich, ohne die eigentliche Playlist zu ver&auml;ndern.</span><br>
+<br>
+<h3>Webradio</h3>
+<span style="font-weight: bold;">Stream-Playlist parsen</span><br>
+Viele Sender 
+bieten eine *.pls-Datei zum Anh&ouml;ren an. Das ist eigentlich ein 
+Playlisten-Format, in dem mehrere Dateien oder Adressen angegeben sein k&ouml;nnen. 
+Bei Webradio-Sendern werden oft mehrere Adressen angegeben, die alle dasselbe 
+senden, aber die Last auf mehrere Server verteilen.<br>
+Nemp bietet die 
+M&ouml;glichkeit, all diese Adressen in die Playlist aufzunehmen - dann erscheint ein 
+Sender ggf. mehrfach in der Playlist. Ansonsten w&auml;hlt Nemp intern eine zuf&auml;llige 
+Adresse aus dieser Liste aus.<br>
+<br>
+<span style="font-weight: bold;">Aufnahmeoptionen</span><br>
+Geben Sie an, in welchem Verzeichnis Nemp die Aufnahmen von Webradio speichern 
+soll, und welche Dateibenennung sie bevorzugen.<br>
+Der Punkt "Bei 
+Titelwechsel neue Datei beginnen" funktioniert ledier nur dann richtig, wenn der 
+Sender vern&uuml;nftige Tags mitsendet, die einen neuen Titel ank&uuml;ndigen. Anhand der 
+reinen Audiodaten kann leider kein Titelwechsel erkannt werden.<br>
+Sie 
+k&ouml;nnen die Dateien auch nach Gr&ouml;&szlig;e oder Dauer aufteilen. Beachten Sie dabei, 
+dass das nur ungef&auml;hre Werte sind. Die Dauer kann um einige Sekunden und die 
+Gr&ouml;&szlig;e um einige Kilobyte von der gew&uuml;nschhten Gr&ouml;&szlig;e abweichen.<br>
+<span style="font-style: italic;">Hinweis: Nemp kann nur Sender aufnehmen, die im mp3- 
+oder im aac-Format senden. Sender, die im Windows-Format oder Ogg-Vorbis senden, 
+k&ouml;nnen nicht aufgenommen werden.</span><br>
+<br>
+<h3>Effekte</h3>
+<span style="font-weight: bold;">&Auml;nderung der Geschwindigkeit</span><br>
+Nemp 
+kann die Wiedergabe eines Liedes schneller oder langsamer ablaufen lassen. 
+Technisch sehr einfach l&auml;sst es sich realisieren, wenn man dabei eine 
+Ver&auml;nderung der Tonh&ouml;he in Kauf nimmt. Das h&ouml;rt sich lustig an, ist aber nicht 
+immer gew&uuml;nscht.<br>
+Wenn man die CPU etwas mehr rechnen l&auml;sst, kann man diesen 
+Effekt recht gut vermeiden.<br>
 <br>
 
-<br>
-
-<span style="font-weight: bold;">Fading</span><br>
-
-Steuert, ob und wie zwischen einzelnen St&uuml;cken &uuml;bergeblendet wird. <br>
-
-<ul style="list-style-type: circle;">
-
-  <li>Ein Fading zwischen zwei Titeln sorgt f&uuml;r einen sanften &Uuml;bergang von einem Titel zum n&auml;chsten</li>
-
-  <li>Ein Fading bei Positionswechsel sorgt f&uuml;r ein nicht ganz so
-abruptes springen innerhalb eines Titels, wenn Sie &uuml;ber den
-Schieberegeler im Hauptfenster an eine andere Position im Titel
-springen.</li>
-
-</ul>
-
-Das Fading kann bei kurzen St&uuml;cken ignoriert werden, oder wenn Sie den Stopp- oder Pause-Button anklicken.<br>
-<br>
-<span style="font-weight: bold;">Stille erkennen</span><br>
-Nemp kann automatisch die Stille am Ende eines Tracks erkennen und
-&uuml;berspringen. Die Wiedergabe des neuen Titels wird eingeleitet,
-wenn die Lautst&auml;rke unter den Schwellwert sinkt. Bei aktiviertem
-Fading wird der Wechsel entsprechend vorher eingeleitet.<br>
 
 
 </body>
