--- a/help/optionen_c_medienbibliothek.html
+++ b/help/optionen_c_medienbibliothek.html
@@ -3,7 +3,7 @@
 <head>
 
   <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
-  <title>Medienbibliothek</title>
+  <title>Dateiverwaltung</title>
 
 
   <style title="" media="" type="text/css">
@@ -35,7 +35,7 @@ font-size: 12px;
       <td style="width: 50px;"><img style="width: 47px; height: 27px;" src="hilfe.png" alt=""></td>
 
       <td>
-      <h2 class="head">Medienbibliothek</h2>
+      <h2 class="head">Dateiverwaltung</h2>
 
       </td>
 
@@ -46,51 +46,81 @@ font-size: 12px;
 
 <hr style="width: 100%; height: 2px;"><br>
 
+Stellen Sie das Verhalten der Medienbibliothek ein.<br>
+<br>
 <span style="font-weight: bold;">Verzeichnisse</span><br>
+
 Nemp kann einige Verzeichnisse beim Start nach neuen Dateien
-untersuchen, um die Medienbibliothek automatisch aktuell zu halten,
-wenn Sie neue Musik auf Ihren Rechner kopiert haben. Sie k&ouml;nnen
-hier neue Verzeichnisse hinzuf&uuml;gen oder vorhandene entfernen.<br>
-<br>
-<span style="font-style: italic;">Hinweis: Nemp verhindert
-Doppeleintr&auml;ge. D.h. wenn Sie ein Unterverzeichnis eines anderen
-angeben, das schon in der Liste ist, wird das neue nicht
-eingef&uuml;hrt. Umgekehrt wird das vorhandene entfernt, wenn Sie ein
-&uuml;bergeordnetes Verzeichnis angeben.</span><br>
-<br>
+untersuchen, um die Medienbibliothek automatisch aktuell zu halten.<br>
+
 <ul style="list-style-type: circle;">
-  <li>Automatisch neue Verzeichnisse &uuml;berwachen f&uuml;gt ein
-Verzeichnis in diese Liste ein, wenn Sie es per Drag&amp;Drop in die
-Medienbibliothek einf&uuml;gen oder &uuml;ber das Men&uuml; neue Ordner
+
+  <li><span style="font-style: italic;">Automatisch neue Verzeichnisse &uuml;berwachen</span>
+f&uuml;gt ein
+Verzeichnis in die Liste der zu &uuml;berwachenden Verzeichnisse ein, wenn Sie es per Drag&amp;Drop in
+die
+Medienbibliothek einf&uuml;gen oder &uuml;ber das Men&uuml;
+neue Ordner
 untersuchen.</li>
-  <li>Bei neuen Verzeichnissen nachfragen bewirkt, dass das erst auf Nachfragee passiert.</li>
+
+  <li><span style="font-style: italic;">Bei neuen Verzeichnissen nachfragen</span> bewirkt, dass das erst
+auf Nachfragee passiert.</li>
+
 </ul>
+
 <br>
-<span style="font-weight: bold;">Dateitypen f&uuml;r die Medienbibliothek</span><br>
-Nemp kann zwar ziemlich viele Dateien abspielen, aber vern&uuml;nftig
-untersuchen kann es nur wenige Typen. Sie k&ouml;nnen daher angeben,
+
+<span style="font-weight: bold;">Dateitypen f&uuml;r
+die Medienbibliothek</span><br>
+
+Nemp kann zwar ziemlich viele Dateien abspielen, aber
+vern&uuml;nftig
+untersuchen kann es nicht alle Typen. Sie k&ouml;nnen daher
+angeben,
 dass beim Scannen nach neuen Dateien z.B. wav- oder midi-Dateien nicht
 in die Medienbibliothek aufgenommen werden sollen.<br>
+<span style="font-style: italic;">Tipp: Nemp kommt sehr gut mit
+folgenden Dateitypen klar: mp3, ogg, flac sowie einigen exotischen
+Formaten wie ape, mpc, ofr, wv und tta.</span><br style="font-style: italic;">
+<span style="font-style: italic;">Die Formate f&uuml;r Windows (wma) und Apple (m4a) werden zurzeit noch nicht sinnvoll unterst&uuml;tzt.</span><br>
+
 <br>
+<h3>Metadaten</h3>
+Nemp speichert "nebenbei" einige Informationen in den Metadaten
+("ID3-Tags") der Audiodateien. Zum Beispiel auch die Bewertung und den
+Abspielz&auml;hler. Nemp kann die Bewertung und den Abspielz&auml;hler
+automatisch anpassen.<br>
 <br>
-<span style="font-weight: bold;">Sonstiges</span><br>
+<h3>Cover</h3>
+Nemp&nbsp;sucht beim Aufbau der Medienbibliothek auch nach passenden
+Covern. Wo genau gesucht werden soll, kann hier eingestellt werden.
+N&auml;heres dazu beim <a href="nemp_coverflow.html">Coverflow</a>.<br>
 <br>
+<h3>Suchoptionen</h3>
+Damit die Schnellsuche in Nemp so schnell sein kann, werden mehr
+Ressourcen (Speicher und/oder Rechenpower) ben&ouml;tigt. Wenn Nemp auf
+einem &auml;lteren Rechner laufen soll, und die Schnellsuche nicht
+fl&uuml;ssig arbeitet, sollten Sie die Schnellsuche anpassen.<br>
 <ul style="list-style-type: circle;">
-  <li>Dateien in Wiedergabelisten untersuchen: Wenn Sie in der
-klassischen Browse-Ansicht in der linken Liste den Punkt
-"Wiedergabelisten" ausw&auml;hlen, werden rechts daneben alle
-Playlisten aufgelistet, die Nemp gefunden hat. Wenn Sie davon eine
-ausw&auml;hlen, werden die Dateien dieser Playlist in der Medienliste
-unten angezeigt. Sie k&ouml;nnen angeben, ob Sie diese Dateien vor der
-Anzeige scannen lassen wollen, damit z.B. die Bitrate auch korrekt
-angezeigt wird, oder nicht.</li>
-  <li>Anzeige immer sortieren: Beim Browsen in der Medienbibliothek
-werden unten immer wieder neue Dateien angezeigt. Sie k&ouml;nnen
-ausw&auml;hlen, ob diese Liste immer so sortiert werden soll, wie Sie
-es vorher eingestellt haben. Um ein fl&uuml;ssiges Browsen zu
-erm&ouml;glichen, kann dieser Sortiervorgang bei langen Listen
-&uuml;bersprungen werden.</li>
+  <li><span style="font-style: italic;">Suche beschleunigen</span>
+ben&ouml;tigt mehr Speicher, ca. 1 mb f&uuml;r 4000 Dateien. F&uuml;r
+beschleunigte Lyric-Suche wird entsprechend noch mehr Speicher
+verwendet.</li>
+  <li><span style="font-style: italic;">"W&auml;hrend Sie tippen"</span> durchsucht die Medienbibliothek w&auml;hrend des Tippens, ohne auf Bet&auml;tigung der Enter-Taste zu warten. <br>
+    <span style="font-style: italic;">Hinweis: Das geht in der Regel nur dann fl&uuml;ssig, wenn die Beschleunigung aktiviert ist</span></li>
+  <li><span style="font-style: italic;">Erlaube Fehler</span> f&uuml;hrt eine unscharfe Suche aus, d.h. kleine Fehler in den ID3-Tags werden &uuml;berlesen.<br>
+    <span style="font-style: italic;">Tipp: Das ist besonders sinnvoll bei Interpreten wie Pink (oder P!nk?) oder "</span><span style="font-style: italic;">Alanis Morissette</span><span style="font-style: italic;">", bei der man nie so genau wei&szlig;, wieviele r, s und t richtig sind.</span></li>
 </ul>
+<h3>Unicode</h3>
+Nemp kann einige Ungereimtheiten bzgl. Unicode und Zeichens&auml;tze
+ausb&uuml;geln. Das ist in vielen F&auml;llen nicht n&ouml;tig, und in
+den verbleibenden F&auml;llen nicht immer automatisch m&ouml;glich. Die
+<span style="font-style: italic;">Automatische Erkennung</span> probiert das dennoch.<br>
 <br>
+<span style="font-style: italic;"><span style="font-weight: bold;">Warnung:</span>
+Wenn Sie "In ID3v-Tags immer Unicode schreiben" aktivieren, k&ouml;nnen
+&auml;ltere Programme die Informationen m&ouml;glicherweise nicht mehr
+lesen.<br>
+</span>
 </body>
 </html>
